--- a/index.html
+++ b/index.html
@@ -5,11 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Campo minato</title>
 </head>
 
-<body>
+<body class="bg-secondary text-white">
+    <header>
+        <div class="container">
+            <div class="my-3 border border-3">
+                <div class="row">
+                    <div class="col">
+                        <h1 class="text-center my-3">CAMPO MINATO</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main>
+        <div class="container">
+            <div class="my-5 border border-3 px-3 py-3">
+                <div class="row">
+                    <div class="col">
+                        <h2 id="display"></h2>
+                    </div>
+                </div>
+            </div>
+            <div class="my-5 border border-3 px-3 py-3">
+                <div class="row">
+                    <div class="col">
+                        <h2 id="display2"></h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src="./js/script.js"></script>
 </body>
 
